--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.duri.finalproject">
+
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
-        android:name="com.example.duri.finalproject.ApplicationController"
+        android:name=".ApplicationController"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -18,7 +21,18 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".SummaryProjectView"
+            android:label="@string/title_activity_project_overview"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".DetailedProjectView"
+            android:label="@string/title_activity_project_view"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".ProjectList"
+            android:label="@string/title_activity_project_list"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
-    <uses-permission
-        android:name="android.permission.INTERNET"/>
+
 </manifest>
