--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,4 +39,5 @@ dependencies {
     compile 'com.android.support:design:23.1.1'
     compile 'com.github.PhilJay:MPAndroidChart:v2.2.4'
     compile fileTree(dir: 'libs', include: '*.jar')
+    compile 'com.android.volley:volley:1.0.0'
 }
